add status and required options of enrollment.

--- a/app/views/companies/_form.html.slim
+++ b/app/views/companies/_form.html.slim
@@ -51,5 +51,8 @@ h2= t("common.title.#{action_name}")
       = f.label :apply_admin_id
       = f.select :apply_admin_id, options_from_collection_for_select(User.enabled, 'id', 'fullname', company.apply_admin_id)
     p
+      = f.label :enrollment_items
+      = f.text_field :enrollment_items
+    p
       = render 'shared/attachments/form', form: f
   = f.submit
