--- a/app/views/applies/try.html.slim
+++ b/app/views/applies/try.html.slim
@@ -4,4 +4,4 @@ h1
   = hidden_field_tag :provider, params[:provider]
   = hidden_field_tag :email, params[:email]
   p
-    = submit_tag "예"
+    = submit_tag t('applies.try.ok_submit')
