--- a/app/views/hrinfos/show.html.slim
+++ b/app/views/hrinfos/show.html.slim
@@ -56,7 +56,7 @@ h2
             = @hrinfo.retired_on
     - if @hrinfo.contact
       #show_command
-        = link_to "주소록 찾기", @hrinfo.contact
+        = link_to t('hrinfos.show.find_address'), @hrinfo.contact
 
       h3
         = t("contacts.show.title")
@@ -77,6 +77,7 @@ h2
               - if @required_documents[rtn]
                 = link_to @required_documents[rtn].title, :controller => "documents", :action => "show", :id => @required_documents[rtn]
               - else
+                = " "
                 = link_to "Register", :controller => "documents", :action => "new", :tag => [rtn, Hrinfo.model_name.human, @hrinfo.user.name].join(',')
         - if !@unrequired_documents.blank?
           - for d in @unrequired_documents
