--- a/app/views/postings/_form.html.slim
+++ b/app/views/postings/_form.html.slim
@@ -14,7 +14,8 @@ h2= t("common.title.#{action_name}")
       = f.label :description
       = f.text_field :description
 
-    h3 항목
+    h3
+      = t('postings.form.list')
     #posting-item-form
       #debit-form
         = render 'posting_items/form', form: f, posting_items: @posting.items, type: t('postings.debits')
