--- a/app/views/section_enrollment/enrollments/dashboard.html.slim
+++ b/app/views/section_enrollment/enrollments/dashboard.html.slim
@@ -1,6 +1,11 @@
 h2 입사지원서 관리
 
 #enrollment-dashboard
+  h3 입사지원 등록 상태
+  p= @enrollment.apply_status
+
+  h3 입사지원 등록
+
   #basic-information
     p.title 기본 정보 입력
     p.menu= link_to '기본정보 등록', [:edit, @enrollment]
@@ -14,3 +19,12 @@ h2 입사지원서 관리
         p.menu= link_to "추가하기", attach_item_enrollment_path(@enrollment, name: item_name)
       p.status= information_filled?(item_name.to_sym)
     .clear
+
+
+  = form_tag :report do
+    = hidden_field_tag :target_type, @enrollment.class
+    = hidden_field_tag :target_id, @enrollment.id
+    = hidden_field_tag :reporter, @apply_admin.id
+    p
+      - if @enrollment.report.report?
+        = submit_tag t('reports.info.report')
