--- a/app/views/section_enrollment/enrollments/dashboard.html.slim
+++ b/app/views/section_enrollment/enrollments/dashboard.html.slim
@@ -9,14 +9,15 @@ h2 입사지원서 관리
 
   #basic-information
     p.title 기본 정보 입력
-    p.menu= link_to '기본정보 등록', [:edit, @enrollment]
+    - if @enrollment.modify?
+      p.menu= link_to '기본정보 등록', [:edit, @enrollment]
     p.status= information_filled?(:basic)
   .clear
 
   - @enrollment.item_names.each do |item_name|
     .more-information
       p.title= item_name
-      - if @enrollment.item_required?(item_name)
+      - if @enrollment.item_required?(item_name) and @enrollment.modify?
         p.menu= link_to "추가하기", attach_item_enrollment_path(@enrollment, name: item_name)
       p.status= information_filled?(item_name.to_sym)
     .clear
