complete. closes #9270 and closes #9277 and closes #9279

--- a/app/views/reports/_info.html.slim
+++ b/app/views/reports/_info.html.slim
@@ -37,16 +37,7 @@ p
         - if report.approve?
           = submit_tag t('reports.info.approve')
 
-- unless report.comments.empty?
-  .box
-    - report.comments.lastest.each do |comment|
-      p
-        = "["
-        = comment.created_at.strftime("%Y.%m.%d %H:%M:%S")
-        = "]"
-        = comment.owner.user.name
-        = ": "
-        = comment.description
+  = render 'reports/log', target: target
 
 - if current_user.admin?
   = render 'accessors/info', access_target: report
