--- a/app/views/change_histories/show.html.slim
+++ b/app/views/change_histories/show.html.slim
@@ -1,4 +1,3 @@
-
 #show_command
   = link_to t('common.title.edit'), [:edit, change_history]
   = " | "
@@ -9,23 +8,14 @@
 h2= t("common.title.show")
 .box
   #descr
-    table border="0" cellspacing="5" cellpadding="5"
-      tr
-        th= ChangeHistory.human_attribute_name('fieldname')
-        td=h change_history.fieldname
-      tr
-        th= ChangeHistory.human_attribute_name('before_value')
-        td=h change_history.before_value
-      tr
-        th= ChangeHistory.human_attribute_name('after_value')
-        td=h change_history.after_value
-      tr
-        th= ChangeHistory.human_attribute_name('user_id')
-        td=h change_history.user.name
-      tr
-        th= ChangeHistory.human_attribute_name('changable_type')
-        td=h change_history.changable_type
-      tr
-        th= ChangeHistory.human_attribute_name('changable_id')
-        td=h change_history.changable_id
+    dl
+      = dtdd change_history, "fieldname"
+      = dtdd change_history, "before_value"
+      = dtdd change_history, "after_value"
+      dt
+        = ChangeHistory.human_attribute_name('user_id')
+        dd
+          = change_history.user.name
+      = dtdd change_history, "changable_type"
+      = dtdd change_history, "changable_id"
   .clear
