--- a/app/views/expense_reports/show.html.slim
+++ b/app/views/expense_reports/show.html.slim
@@ -10,7 +10,7 @@
   - unless expense_report.posting
     = link_to t('common.link.edit'), [:edit, expense_report]
     = " | "
-    = link_to t('common.link.destroy'), expense_report, :method => :delete, confirm: t("common.messages.delete_confirm")
+    = link_to t('common.link.destroy'), expense_report, :method => :delete, :confirm => "Are  you sure?"
     = " | "
   = link_to t('common.title.back'), :expense_reports
 
@@ -19,30 +19,27 @@ h2
 
 .box
   #descr
-    table
-      tr
-        th= expense_report.class.human_attribute_name(:owner)
-        td= expense_report.hrinfo.fullname
-      tr
-        th= expense_report.class.human_attribute_name(:target)
-        td= t("activerecord.models.#{expense_report.target_type.tableize.singularize}")
-      tr
-        th= expense_report.class.human_attribute_name(:project)
-        td= expense_report.project.name rescue ""
-      tr
-        th= expense_report.class.human_attribute_name(:description)
-        td= expense_report.description
-      tr
-        th= expense_report.class.human_attribute_name(:expensed_at)
-        td= expense_report.expensed_at
-      tr
-        th= expense_report.class.human_attribute_name(:amount)
-        td= number_to_currency expense_report.amount
+    dl
+      dt
+        = expense_report.class.human_attribute_name(:owner)
+        dd = expense_report.hrinfo.fullname
+      dt
+        = expense_report.class.human_attribute_name(:target)
+        dd
+          = t("activerecord.models.#{expense_report.target_type.tableize.singularize}")
+      dt
+        = expense_report.class.human_attribute_name(:project)
+        dd
+          = expense_report.project.name rescue ""
+      = dtdd expense_report, "description"
+      = dtdd expense_report, "expensed_at"
+      dt
+        = expense_report.class.human_attribute_name(:amount)
+        dd
+          = number_to_currency expense_report.amount
   - if expense_report.target.respond_to?(:attachments)
     = render "shared/attachments/detail", :target => expense_report.target
   .clear
 br
 = render "#{expense_report.target_type.tableize}/detail", target: expense_report.target
 = render 'reports/info', target: expense_report
-
-
