--- a/app/views/holidays/show.html.slim
+++ b/app/views/holidays/show.html.slim
@@ -9,11 +9,7 @@ h2 ...
 
 .box
   #descr
-    table cellspacing="5" cellpadding="5"
-      tr
-        th =Holiday.human_attribute_name('theday')
-        td= holiday.theday
-      tr
-        th =Holiday.human_attribute_name('dayname')
-        td= holiday.dayname
+    dl
+      = dtdd holiday, "theday"
+      = dtdd holiday, "dayname"
   .clear
