--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -7,32 +7,18 @@
 h2
   = project.name
 .box
-  table border="0" cellspacing="5" cellpadding="5"
-    tr
-      th
-        = Project.human_attribute_name('revenue')
-      td.money
+  dl
+    dt
+      = Project.human_attribute_name('revenue')
+      dd
         = number_to_currency project.revenue
-    tr
-      th
-        = Project.human_attribute_name('started_on')
-      td
-        = project.started_on
-    tr
-      th
-        = Project.human_attribute_name("ending_on")
-      td
-        = project.ending_on
+    = dtdd project, "started_on"
+    = dtdd project, "ending_on"
   - if project.completed?
-    tr
-      th
-        = Project.human_attribute_name("ended_on")
-      td
-        = project.ended_on
-    tr
-      th
-        = t('projects.show.users')
-      td
+    = dtdd project, "ended_on"
+    dt
+      = t('projects.show.users')
+      dd
         - for user in project.users
           = user.name
           = link_to t('projects.show.allocation_ratio'), [:assign, user, :projects]
