--- a/app/views/permissions/show.html.slim
+++ b/app/views/permissions/show.html.slim
@@ -10,8 +10,8 @@ h2
   ul
     - for user in @permission.user
       li
-  		  = user.name
-  		  = link_to " [X]", :action => 'removeuser', :id => @permission,:user_id => user
+  		  = user.name + " "
+  		  = link_to "[X]", :action => 'removeuser', :id => @permission,:user_id => user
 - else
   = t('permissions.show.none')
 
