--- a/app/views/card_used_sources/show.html.slim
+++ b/app/views/card_used_sources/show.html.slim
@@ -15,43 +15,15 @@ h2= "#{card_used_source.creditcard.nickname}: #{card_used_source.creditcard.card
   = dtdd card_used_source, "card_holder_name"
   = dtdd card_used_source, "used_area"
   = dtdd card_used_source, "approve_no"
-  dl
-    dt
-      = CardUsedSource.human_attribute_name(:approved_at)
-      dd
-        = card_used_source.approved_at ? card_used_source.approved_at.strftime("%Y %m.%d") : 0
-  dl
-    dt
-      = CardUsedSource.human_attribute_name(:approved_time)
-      dd
-        = card_used_source.approved_time ? card_used_source.approved_time.strftime("%H:%M:%S") : 0
+  = dtdd card_used_source, "approved_at"
+  = dtdd card_used_source, "approved_time"
   = dtdd card_used_source, "sales_type"
-  dl
-    dt
-      = CardUsedSource.human_attribute_name(:money_foreign)
-      dd
-        = number_to_currency card_used_source.money_foreign
-  dl
-    dt
-      = CardUsedSource.human_attribute_name(:price)
-      dd
-        = number_to_currency card_used_source.price
-  dl
-    dt
-      = CardUsedSource.human_attribute_name(:tax)
-      dd
-        = number_to_currency card_used_source.tax
-  dl
-    dt
-      = CardUsedSource.human_attribute_name(:tip)
-      dd
-        = number_to_currency card_used_source.tip
+  = dtdd card_used_source, "money_foreign"
+  = dtdd card_used_source, "price"
+  = dtdd card_used_source, "tax"
+  = dtdd card_used_source, "tip"
   = dtdd card_used_source, "monthly_duration"
-  dl
-    dt
-      = CardUsedSource.human_attribute_name(:exchange_krw)
-      dd
-        = number_to_currency card_used_source.exchange_krw
+  = dtdd card_used_source, "exchange_krw"
   = dtdd card_used_source, "foreign_country_code"
   = dtdd card_used_source, "foreign_country_name"
   = dtdd card_used_source, "store_business_no"
