--- a/app/views/accessors/_info.html.slim
+++ b/app/views/accessors/_info.html.slim
@@ -1,14 +1,15 @@
 h3
   = t('accessors.info.permissions')
-p
-  = t('accessors.info.write')
-  ' :
-  = access_target.accessors.writers.map{|accessor| accessor.fullname}.join(', ')
+ul
+  - access_target.accessors.each do |accessor| 
+    li
+      = accessor.fullname
+      = "("
+      = accessor.write? ? "읽기/쓰기" : "읽기"
+      = ")"
+      = link_to "[x]", accessors_path(accessor_id: accessor.id), :method => :delete
 
-p
-  = t('accessors.info.read')
-  ' :
-  = access_target.accessors.readers.map{|accessor| accessor.fullname}.join(', ')
+
 
 - if access_target.access?(current_user, :write)
   h3
@@ -18,7 +19,7 @@ p
     = hidden_field_tag :resources_id, access_target.id
     p
       = label_tag :access_type, t('activerecord.attributes.access_person.access_type')
-      = select_tag :access_type, options_for_select([["읽기", "read"], ["쓰기", "write"], ["제거", "remove"]])
+      = select_tag :access_type, options_for_select([["읽기", "read"], ["쓰기", "write"]])
     p
       = label_tag :accessor, t('activerecord.attributes.access_person.accessor')
       = select_tag :accessor, options_for_select(User.enabled.map{|user| [user.name, user.id]})
