--- a/app/views/postings/show.html.slim
+++ b/app/views/postings/show.html.slim
@@ -8,15 +8,11 @@
 h2= t('.title')
 
 .box
-  = dtdd posting, "posted_at"
-  = dtdd posting, "description"
   dl
+    = dtdd posting, "posted_at"
+    = dtdd posting, "description"
     dt
       = t('postings.show.detail')
-      dd
-        = render "postings/sub_show", :target => posting
-  dl
-    dt
-      = t('postings.show.total')
-      dd
-        = number_to_currency posting.total_amount
+    dd
+      = render "postings/sub_show", :target => posting
+    = dtdd posting, "total_amount"
