--- a/app/views/taxbills/show.html.slim
+++ b/app/views/taxbills/show.html.slim
@@ -15,38 +15,17 @@ h2
       = link_to "#{BusinessClient.human_attribute_name('name')} : #{taxbill.taxman.business_client.name} ( #{taxbill.taxman.business_client.registration_number} )", :controller => "business_clients", :action => "show", :id => taxbill.taxman.business_client
       = " - #{taxbill.taxman.business_client.owner}"
     dl
-      dt
-        = BusinessClient.human_attribute_name('category')
-        ' /
-        = BusinessClient.human_attribute_name('business_status')
-        dd
-          = taxbill.taxman.business_client.category
-          ' /
-          = taxbill.taxman.business_client.business_status 
-    dl
-      dt
-        = BusinessClient.human_attribute_name('address')
-        dd
-          = taxbill.taxman.business_client.address
-    dl
+      = dtdd taxbill.taxman.business_client, "category"
+      = dtdd taxbill.taxman.business_client, "business_status"
+      = dtdd taxbill.taxman.business_client, "address"
       dt
         = Taxbill.human_attribute_name('taxman_id')
-        dd
-          = taxbill.taxman.fullname
-    dl
-      dt
-        = Taxman.human_attribute_name('email')
-        dd
-          = taxbill.taxman.email
-    dl
-      dt
-        = Taxman.human_attribute_name('phonenumber')
-        dd
-          = taxbill.taxman.phonenumber
+      dd
+        = taxbill.taxman.fullname
+      = dtdd taxbill.taxman, "email"
+      = dtdd taxbill.taxman, "phonenumber"
   = render "shared/attachments/detail", :target => taxbill
   .clear
-
-
 
   div
     h3
