--- a/app/views/section_enrollment/enrollments/attach_item.html.slim
+++ b/app/views/section_enrollment/enrollments/attach_item.html.slim
@@ -5,13 +5,13 @@
     - @item.attachments.each do |attachment|
       li
         = attachment.original_filename
-        = link_to "[x]", delete_attachment_enrollment_path(attachment_id: attachment.id, name: params[:name]), method: :delete, confirm: "Are you sure?"
+        = link_to "[x]", delete_attachment_enrollment_path(attachment_id: attachment.id, name: params[:name]), method: :delete, confirm: t("common.messages.delete_confirm")
 
 
 = form_tag [:attach, @enrollment], multipart: true do
-  = label_tag :picture, "첨부파일"
+  = label_tag :picture, t('section_enrollment.enrollment.attachment_item.attachments')
   = hidden_field_tag :name, params[:name]
   = file_field_tag :picture
-  = submit_tag '추가'
+  = submit_tag t('section_enrollment.enrollment.attachment_item.back')
 
-= link_to "돌아가기", [:dashboard, :enrollments]
+= link_to t('section_enrollment.enrollment.attachment_item.back'), [:dashboard, :enrollments]
