--- a/app/views/accessors/_info.html.slim
+++ b/app/views/accessors/_info.html.slim
@@ -5,7 +5,7 @@ ul
     li
       = accessor.fullname
       = "("
-      = accessor.write? ? "읽기/쓰기" : "읽기"
+      = accessor.write? ? t('accessors.info.read_write') : t('accessors.info.read')
       = ")"
       = link_to "[x]", accessors_path(accessor_id: accessor.id), :method => :delete
 
@@ -19,7 +19,7 @@ ul
     = hidden_field_tag :resources_id, access_target.id
     p
       = label_tag :access_type, t('activerecord.attributes.access_person.access_type')
-      = select_tag :access_type, options_for_select([["읽기", "read"], ["쓰기", "write"]])
+      = select_tag :access_type, options_for_select([[t('accessors.info.read'), "read"], [t('accessors.info.write'), "write"]])
     p
       = label_tag :accessor, t('activerecord.attributes.access_person.accessor')
       = select_tag :accessor, options_for_select(User.enabled.map{|user| [user.name, user.id]})
