disabled user shouldn't display in permission page. closes #9655

--- a/app/views/permissions/edit.html.slim
+++ b/app/views/permissions/edit.html.slim
@@ -12,7 +12,7 @@ h1
 		= f.label :users
 		br
 		- if !User.all.blank?
-		  - for user in User.all
+		  - for user in User.enabled
 				= check_box_tag "permission[user_ids][]", user.id, @permission.user.include?(user)
 				= user.name
   p
