--- a/app/views/cardbills/show.html.slim
+++ b/app/views/cardbills/show.html.slim
@@ -1,7 +1,7 @@
 - title t('.title')
 
 #show_command
-  - if @cardbill.used
+  - if @cardbill.used and @user.ingroup?("admin")
     = link_to t('cardbills.show.to_use'), @cardbill.used
     = " | "
   -  if @cardbill.status == 'verified'
@@ -10,7 +10,7 @@
     - else
       = link_to t('cardbills.show.create_expense'), new_expense_report_path(target_type: @cardbill.class, target_id: @cardbill.id, expensed_at: @cardbill.transdate, amount: @cardbill.totalamount)
     = " | "
-  - if @cardbill.approved
+  - if @cardbill.approved and @user.ingroup?("admin")
     = link_to t('.to_approved'), @cardbill.approved
     = " | "
   = link_to t('common.title.edit'), edit_cardbill_path(@cardbill)
