--- a/app/views/main/_main_menu2.html.slim
+++ b/app/views/main/_main_menu2.html.slim
@@ -21,8 +21,10 @@ div class={@user.admin? ? "admin" : ""}
         - if @user.permission.any? {|perm| perm.name == 'taxbills'}
           li= link_to t("taxbills.index.title"), :taxbills
         li= link_to t("expense_reports.index.title"), :expense_reports
-        li= link_to t("ledger_accounts.title"), :ledger_accounts
-        li= link_to t("postings.title"), :postings
+        - if @user.permission.any? {|perm| perm.name == 'bank_accounts'}
+          li= link_to t("ledger_accounts.title"), :ledger_accounts
+        - if @user.permission.any? {|perm| perm.name == 'bank_accounts'}
+          li= link_to t("postings.title"), :postings
 
     .menubar_item.item3
       h2= t("main.index.project")
